Introduce one-time URL

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
             "request": "launch",
             "mode": "debug",
             "program": "reader.go"
+            // ,"args": ["-url", "https://some.url"]
         }
     ]
 }
